# state-income-tax

./: .python-version  README.md  pyproject.toml  requirements.txt
json/: 2024.json
raw/: SOURCES.md  State-Individual-Income-Tax-Rates-and-Brackets-2015-2024_Tax_Foundation(1).xlsx  taxfoundation_notes.txt
src/state_income_tax/: __main__.py  constants.py  ingest.py
